# black-space-2

./: .pdm-python  main_app.py  pyproject.toml  requirements.txt  run_me.sh  zappa_settings.json
black_space/: main_app.py
black_space/static/css/: additional.css
black_space/templates/: about_me.html  index.html  life.html  particles.html  playful.html
static/js/: particles.js
templates/: _macros.html  about_me.html  base.html  index.html  life.html  particles.html
