[project]
name = "black_space"
version = "3.0"
description = "Personal website"
authors = [
    {name = "Mike Readhead", email = "mike@0xdb.co.uk"},
]
dependencies = [
    "zappa>=0.58.0",
    "setuptools>=69.0.2",
    "flask>=3.0.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

